--- a/appointa/index.html
+++ b/appointa/index.html
@@ -142,7 +142,7 @@
               </a>
               <a href="/seer/">
                 <div class="cardBorder SEER ">
-                  <img src="../image/Cover_SEER.jpg" alt="SEER">
+                  <img src="../image/Cover_SEER.png" alt="SEER">
                   <div class="element">
                     <h6 class="colorBlack">SEER | Track business performance</h6>
                   </div>
