--- a/design_system/index.html
+++ b/design_system/index.html
@@ -135,8 +135,8 @@
         <ul class="nav-menu">
           <li class="dropdown nav-item active  marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
-              <a target="_blank"
-                href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611">
+              <a href="/glorify/">
+
                 <div class="cardBorder GLORIFY">
                   <img src="../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
@@ -146,7 +146,7 @@
               </a>
               <a href="/seer/">
                 <div class="cardBorder SEER ">
-                  <img src="../image/Cover_SEER.jpg" alt="SEER">
+                  <img src="../image/Cover_SEER.png" alt="SEER">
                   <div class="element">
                     <h6 class="colorBlack">SEER | Track business performance</h6>
                   </div>
@@ -154,7 +154,7 @@
               </a>
               <a href="/appointa/">
                 <div class="cardBorder APPOINTA">
-                  <img src="../image/Cover_APPOINTA.jpg" alt="APPOINTA">
+                  <img src="../image/Cover_APPOINTA.png" alt="APPOINTA">
                   <div class="element">
                     <h5 class="colorBlack">APPOINTA | Scheduling</h5>
                   </div>
@@ -1362,7 +1362,13 @@
     </div>
   </div>
   <!-- Card -->
-  <!-- slide -->
+  <div class="blankHL"></div>
+  <div class="wrapper element">
+    <p class="tArrow">Slideshow <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+  </div>
+  <div class="blankHS"></div>
+
+  <!-- slide 1 -->
   <div class="containerNew">
     <div class="carouselNew">
       <input type="radio" name="slides" checked="checked" id="slide-1">
@@ -1375,7 +1381,7 @@
         <li class="carousel__slide">
           <figure>
             <div>
-              <img src="https://picsum.photos/id/1041/800/450" alt="">
+              <img src="../PlaceholderDark.svg" alt="">
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -1386,7 +1392,7 @@
         <li class="carousel__slide">
           <figure>
             <div>
-              <img src="https://picsum.photos/id/1043/800/450" alt="">
+              <img src="../PlaceholderDark.svg" alt="">
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -1397,7 +1403,7 @@
         <li class="carousel__slide">
           <figure>
             <div>
-              <img src="https://picsum.photos/id/1044/800/450" alt="">
+              <img src="../PlaceholderDark.svg" alt="">
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -1408,7 +1414,7 @@
         <li class="carousel__slide">
           <figure>
             <div>
-              <img src="https://picsum.photos/id/1045/800/450" alt="">
+              <img src="../PlaceholderDark.svg" alt="">
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -1419,7 +1425,7 @@
         <li class="carousel__slide">
           <figure>
             <div>
-              <img src="https://picsum.photos/id/1049/800/450" alt="">
+              <img src="../PlaceholderDark.svg" alt="">
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -1430,7 +1436,7 @@
         <li class="carousel__slide">
           <figure>
             <div>
-              <img src="https://picsum.photos/id/1052/800/450" alt="">
+              <img src="../PlaceholderDark.svg" alt="">
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -1441,28 +1447,73 @@
       </ul>
       <ul class="carousel__thumbnails">
         <li>
-          <label for="slide-1"><img src="https://picsum.photos/id/1041/150/150" alt=""></label>
+          <label for="slide-1"><img src="../PlaceholderDark.svg" alt=""></label>
         </li>
         <li>
-          <label for="slide-2"><img src="https://picsum.photos/id/1043/150/150" alt=""></label>
+          <label for="slide-2"><img src="../PlaceholderDark.svg" alt=""></label>
         </li>
         <li>
-          <label for="slide-3"><img src="https://picsum.photos/id/1044/150/150" alt=""></label>
+          <label for="slide-3"><img src="../PlaceholderDark.svg" alt=""></label>
         </li>
         <li>
-          <label for="slide-4"><img src="https://picsum.photos/id/1045/150/150" alt=""></label>
+          <label for="slide-4"><img src="../PlaceholderDark.svg" alt=""></label>
         </li>
         <li>
-          <label for="slide-5"><img src="https://picsum.photos/id/1049/150/150" alt=""></label>
+          <label for="slide-5"><img src="../PlaceholderDark.svg" alt=""></label>
         </li>
         <li>
-          <label for="slide-6"><img src="https://picsum.photos/id/1052/150/150" alt=""></label>
+          <label for="slide-6"><img src="../PlaceholderDark.svg" alt=""></label>
         </li>
       </ul>
     </div>
   </div>
-  <!-- slide -->
+  <!-- slide 1 -->
+  <div class="blankHL"></div>
 
+  <!-- slide 2 -->
+  <div class="wrapper">
+    <div class="LRCarouselContainer cardAPPOINTA">
+      <div class="LRCarouselLeftZone">
+        <ul class="list">
+          <li class="item">
+            <input type="radio" id="dropdown" name="UI" checked="checked" />
+            <label class="dropdown" for="dropdown">Content 1</label>
+            <div class="LRCarouselContent">
+              <img class="shadowFilterL" src="../PlaceholderDark.svg" alt="Placeholder">
+            </div>
+          </li>
+          <li class="item">
+            <input type="radio" id="callout" name="UI" />
+            <label class="callout" for="callout">Content 2</label>
+            <div class="LRCarouselContent">
+              <img class="shadowFilterL" src="../PlaceholderDark.svg" alt="Placeholder">
+            </div>
+          </li>
+          <li class="item">
+            <input type="radio" id="headerUI" name="UI" />
+            <label class="headerUI" for="headerUI">Content 3</label>
+            <div class="LRCarouselContent">
+              <img class="shadowFilterL" src="../PlaceholderDark.svg" alt="Placeholder">
+            </div>
+          </li>
+          <li class="item">
+            <input type="radio" id="pill" name="UI" />
+            <label class="pill" for="pill">Content 4</label>
+            <div class="LRCarouselContent">
+              <img class="shadowFilterL" src="../PlaceholderDark.svg" alt="Placeholder">
+            </div>
+          </li>
+
+        </ul>
+      </div>
+      <div class="LRCarouselRightZone"></div>
+    </div>
+
+
+
+
+  </div>
+  <!-- slide 2 -->
 
   <div class="blankHM"></div>
   <div class="Grid Grid--full u-textCenter">
