--- a/glorify/index.html
+++ b/glorify/index.html
@@ -27,7 +27,6 @@
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
-  <script type="text/javascript" src="../scripts_project.js"></script>
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -137,7 +136,7 @@
             <div class="dropdown-content">
               <a href="/appointa/">
                 <div class="cardBorder APPOINTA">
-                  <img src="../image/Cover_APPOINTA.jpg" alt="APPOINTA">
+                  <img src="../image/Cover_APPOINTA.png" alt="APPOINTA">
                   <div class="element">
                     <h5 class="colorBlack">APPOINTA | Scheduling</h5>
                   </div>
@@ -145,7 +144,7 @@
               </a>
               <a href="/seer/">
                 <div class="cardBorder SEER ">
-                  <img src="../image/Cover_SEER.jpg" alt="SEER">
+                  <img src="../image/Cover_SEER.png" alt="SEER">
                   <div class="element">
                     <h6 class="colorBlack">SEER | Track business performance</h6>
                   </div>
@@ -193,7 +192,6 @@
 
     <div class="ProjectBanner displayLaptop">
       <img src="Mockup.png" alt="GLORIFY">
-
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
           target="_blank"> <button class="button-35 GLORIFY">       
