--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
 <html lang="en">
-
 <head>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +23,6 @@
   <meta property='og:url' content="https://vickywang.me" />
   <meta property="og:site_name" content="Vicky's Website">
 
-
   <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="627">
@@ -39,6 +37,8 @@
   <meta name="twitter:url" content="//vickywang.me/">
   <meta name="twitter:creator" content="VICKY WANG" />
   <!-- twitter -->
+
+
 
 
 
@@ -195,7 +195,7 @@
   </header>
 
   <!-- header -->
-  <main>
+  <mai>
 
     <div class="blankHM"></div>
     <!--intro-->
@@ -263,7 +263,7 @@
     <!-- Arrow -->
     <div class="blankHS"></div>
     <!-- projects -->
-
+    
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
@@ -389,7 +389,7 @@
                   <div class="element">
                     <div class="element">
                       <h5>For website case study &#64; vickywang.me </h5>
-                      <h3 class="arrCard"><strong>NAVIGATION DESIGN</strong></h3>
+                      <h3 class="arrCard"><strong>NAVIGATION SYSTEM</strong></h3>
                       <h4>Developing a more structured and logical navigation system for displaying case studies
                       </h4>
                     </div>
@@ -499,7 +499,7 @@
       </div>
     </button>
     <!--back to top-->
-  </main>
+  </mai>
 
   <!--footer-->
   <footer class="Grey100Bg">
