--- a/navigation/index.html
+++ b/navigation/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
 <html lang="en">
-
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -157,7 +154,7 @@
           <li class="dropdown nav-item active  marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
 
-              <a target="_blank" href="/glorify/">
+              <a href="/glorify/">
                 <div class="cardBorder GLORIFY">
                   <img src="../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
@@ -167,7 +164,7 @@
               </a>
               <a href="/appointa/">
                 <div class="cardBorder APPOINTA">
-                  <img src="../image/Cover_APPOINTA.jpg" alt="APPOINTA">
+                  <img src="../image/Cover_APPOINTA.png" alt="APPOINTA">
                   <div class="element">
                     <h5 class="colorBlack">APPOINTA | Scheduling</h5>
                   </div>
@@ -175,7 +172,7 @@
               </a>
               <a href="/seer/">
                 <div class="cardBorder SEER ">
-                  <img src="../image/Cover_SEER.jpg" alt="SEER">
+                  <img src="../image/Cover_SEER.png" alt="SEER">
                   <div class="element">
                     <h6 class="colorBlack">SEER | Track business performance</h6>
                   </div>
@@ -355,7 +352,6 @@
                 <img src="../image/Cover_NavigationV3.svg" alt="vickywang.me/navigation/V3">
                 <div class="element">
                   <h3 class="arrCard"><strong>Version 3</strong></h3>
-                  <!--Analysis Report-->
                   <h4>After conducting additional usability testing, I have refined the method of displaying content
                     in a single location, which is more organized and avoids the need for a lengthy list.</h4>
                 </div>
@@ -365,191 +361,7 @@
         </div>
       </div>
 
-      <div class="Grid Grid--gutters Grid--1of6">
-        <div class="Grid-cell">
-          <nav class="subNav element">
-            <ol>
-              <li><a href="#content1" class="newTitlePanel">Version 1</a>
-                <ul>
-                  <li class="newPanelV3"><a href="#content11">C1 - SC 1</a></li>
-                  <li class="newPanelV3"><a href="#content12">C1 - SC 2</a></li>
-                </ul>
-              </li>
-              <li><a href="#content2" class="newTitlePanel">Version 2</a>
-                <ul>
-                  <li class="newPanelV3"><a href="#content21">C2 - SC 1</a></li>
-                  <li class="newPanelV3"><a href="#content22">C2 - SC 2</a></li>
-                </ul>
-              </li>
 
-              <li><a href="#content3" class="newTitlePanel">Version 3</a>
-                <ul>
-                  <li class="newPanelV3"><a href="#content31"> C3 - SC 1 </a></li>
-                  <li class="newPanelV3"><a href="#content32">C3 - SC 2</a></li>
-                </ul>
-              </li>
-
-            </ol>
-          </nav>
-        </div>
-        <div class="Grid-cell">
-          <section id="content1">
-            <section id="content11">
-              <!-- Title -->
-              <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
-                <div class="Grid-cell">
-                  <h1 class="Grid Grid--center"> <span>Version 1</span><img class="moveUpDown widthLogo"
-                      src="../icon/IconCompass.svg" alt="Version 1">
-                  </h1>
-                </div>
-              </div>
-              <!-- Title -->
-              <!-- Arrow -->
-              <div class="wrapper">
-                <div class="element">
-                  <h2 class="tArrow">C1 - SC 1 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
-                </div>
-              </div>
-              <!-- Arrow -->
-              <!-- Img -->
-
-              <div class="Grid Grid--full u-textCenter">
-                <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
-                  </div>
-                </div>
-              </div>
-              <!-- Img -->
-            </section>
-            <section id="content12">
-
-              <!-- Arrow -->
-              <div class="wrapper">
-                <div class="element">
-                  <h2 class="tArrow">C1 - SC 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
-                </div>
-              </div>
-              <!-- Arrow -->
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="element">
-                    <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur
-                      adipiscing
-                      elit, sed
-                      do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    </p>
-
-                  </div>
-                </div>
-              </div>
-
-            </section>
-          </section>
-
-          <section id="content2">
-            <section id="content21">
-              <!-- Title -->
-
-              <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
-                <div class="Grid-cell">
-                  <h1 class="Grid Grid--center"> <span>Version 2</span><img class="moveUpDown widthLogo"
-                      src="../icon/IconCompass.svg" alt="Version 2">
-                  </h1>
-                </div>
-              </div>
-              <!-- Title -->
-              <!-- Arrow -->
-              <div class="wrapper">
-                <div class="element">
-                  <h2 class="tArrow">C2 - SC 1 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
-                </div>
-              </div>
-              <!-- Arrow -->
-              <!-- Img -->
-
-              <div class="Grid Grid--full u-textCenter">
-                <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
-                  </div>
-                </div>
-              </div>
-              <!-- Img -->
-            </section>
-            <section id="content22">
-
-              <!-- Title -->
-              <!-- Arrow -->
-              <div class="wrapper">
-                <div class="element">
-                  <h2 class="tArrow">C2 - SC 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
-                </div>
-              </div>
-              <!-- Arrow -->
-              <!-- Img -->
-
-              <div class="Grid Grid--full u-textCenter">
-                <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
-                  </div>
-                </div>
-              </div>
-              <!-- Img -->
-            </section>
-          </section>
-          <section id="content3">
-            <section id="content31">
-              <!-- Title -->
-
-              <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
-                <div class="Grid-cell">
-                  <h1 class="Grid Grid--center"> <span>Version 3</span><img class="moveUpDown widthLogo"
-                      src="../icon/IconCompass.svg" alt="Version 3">
-                  </h1>
-                </div>
-              </div>
-              <!-- Title -->
-              <!-- Arrow -->
-              <div class="wrapper">
-                <div class="element">
-                  <h2 class="tArrow">C3 - SC 1<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
-                </div>
-              </div>
-              <!-- Arrow -->
-              <!-- Img -->
-
-              <div class="Grid Grid--full u-textCenter">
-                <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
-                  </div>
-                </div>
-              </div>
-              <!-- Img -->
-            </section>
-            <section id="content32">
-              <!-- Arrow -->
-              <div class="wrapper">
-                <div class="element">
-                  <h2 class="tArrow">C3 - SC 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
-                </div>
-              </div>
-              <!-- Arrow -->
-              <!-- Img -->
-
-              <div class="Grid Grid--full u-textCenter">
-                <div class="Grid-cell">
-                  <div class="element"> <img class="cardAPPOINTA " src="../Placeholder.svg" alt="New User">
-                  </div>
-                </div>
-              </div>
-              <!-- Img -->
-            </section>
-          </section>
-        </div>
-
-
-
-
-      </div>
     </div>
 
 
