--- a/navigation/V2/index.html
+++ b/navigation/V2/index.html
@@ -165,6 +165,14 @@
                   </div>
                 </div>
               </a>
+              <a href="/appointa/">
+                <div class="cardBorder APPOINTA">
+                  <img src="../../image/Cover_APPOINTA.png" alt="APPOINTA">
+                  <div class="element">
+                    <h5 class="colorBlack">APPOINTA | Scheduling</h5>
+                  </div>
+                </div>
+              </a>
               <a href="/seer/">
                 <div class="cardBorder SEER ">
                   <img src="../../image/Cover_SEER.png" alt="SEER">
@@ -182,7 +190,14 @@
                   </div>
                 </div>
               </a>
-
+              <a href="/navigation/">
+                <div class="cardBorder ">
+                  <img src="../../image/Cover_portfolioWeb.png" alt="Design System">
+                  <div class="element">
+                    <h6 class="colorBlack">Navigation Design | vickywang.me</h6>
+                  </div>
+                </div>
+              </a>
             </div>
           </li>
 
