--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1469,51 +1469,30 @@
   </div>
   <!-- slide 1 -->
   <div class="blankHL"></div>
-
   <!-- slide 2 -->
-  <div class="wrapper">
-    <div class="LRCarouselContainer cardAPPOINTA">
-      <div class="LRCarouselLeftZone">
-        <ul class="list">
-          <li class="item">
-            <input type="radio" id="dropdown" name="UI" checked="checked" />
-            <label class="dropdown" for="dropdown">Content 1</label>
-            <div class="LRCarouselContent">
-              <img class="shadowFilterL" src="../PlaceholderDark.svg" alt="Placeholder">
-            </div>
-          </li>
-          <li class="item">
-            <input type="radio" id="callout" name="UI" />
-            <label class="callout" for="callout">Content 2</label>
-            <div class="LRCarouselContent">
-              <img class="shadowFilterL" src="../PlaceholderDark.svg" alt="Placeholder">
-            </div>
-          </li>
-          <li class="item">
-            <input type="radio" id="headerUI" name="UI" />
-            <label class="headerUI" for="headerUI">Content 3</label>
-            <div class="LRCarouselContent">
-              <img class="shadowFilterL" src="../PlaceholderDark.svg" alt="Placeholder">
-            </div>
-          </li>
-          <li class="item">
-            <input type="radio" id="pill" name="UI" />
-            <label class="pill" for="pill">Content 4</label>
-            <div class="LRCarouselContent">
-              <img class="shadowFilterL" src="../PlaceholderDark.svg" alt="Placeholder">
-            </div>
-          </li>
-
-        </ul>
-      </div>
-      <div class="LRCarouselRightZone"></div>
+  <section class="LRcarousel" aria-label="LRcarousel" Tabindex="0">
+    <a class="carousel__skip-link" href="#skip-link">Skip the Carousel</a>
+    <div class="carousel__nav">
+      <a class="slider-nav" aria-label="Go to slide 1">1</a>
+      <a class="slider-nav" aria-label="Go to slide 2">2</a>
+      <a class="slider-nav" aria-label="Go to slide 3">3</a>
+      <a class="slider-nav" aria-label="Go to slide 4">4</a>
+      <a class="slider-nav" aria-label="Go to slide 5">5</a>
     </div>
+    <div class="LRslides">
+      <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">image1</div>
+      <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">image2</div>
+      <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">image3</div>
+      <div class="slides-item slide-4" id="slide-4" aria-label="slide 4 of 5" tabindex="0">image4</div>
+      <div class="slides-item slide-5" id="slide-5" aria-label="slide 5 of 5" tabindex="0">image5</div>
+    </div>
+  
+    <div class="carousel__skip-message" id="skip-link" tabindex="0"></div>
+  </section>
 
-
-
-
-  </div>
   <!-- slide 2 -->
+
+
 
   <div class="blankHM"></div>
   <div class="Grid Grid--full u-textCenter">
