--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1368,8 +1368,8 @@
   </div>
   <div class="blankHS"></div>
 
-  <!-- slide 1 -->
-  <div class="containerNew">
+  <!-- carouselNew-->
+  <div class="containerNew wrapper">
     <div class="carouselNew">
       <input type="radio" name="slides" checked="checked" id="slide-1">
       <input type="radio" name="slides" id="slide-2">
@@ -1385,7 +1385,7 @@
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Photo: Tim Marshall</span>
+              <span class="credit">Lorem ipsum</span>
             </figcaption>
           </figure>
         </li>
@@ -1396,7 +1396,7 @@
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Photo: Christian Joudrey</span>
+              <span class="credit">Lorem ipsum</span>
             </figcaption>
           </figure>
         </li>
@@ -1407,7 +1407,7 @@
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Photo: Steve Carter</span>
+              <span class="credit">Lorem ipsum</span>
             </figcaption>
           </figure>
         </li>
@@ -1418,7 +1418,7 @@
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Photo: Aleksandra Boguslawska</span>
+              <span class="credit">Lorem ipsum</span>
             </figcaption>
           </figure>
         </li>
@@ -1429,7 +1429,7 @@
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Photo: Rosan Harmens</span>
+              <span class="credit">Lorem ipsum</span>
             </figcaption>
           </figure>
         </li>
@@ -1467,30 +1467,67 @@
       </ul>
     </div>
   </div>
-  <!-- slide 1 -->
+  <!-- carouselNew-->
   <div class="blankHL"></div>
-  <!-- slide 2 -->
-  <section class="LRcarousel" aria-label="LRcarousel" Tabindex="0">
-    <a class="carousel__skip-link" href="#skip-link">Skip the Carousel</a>
-    <div class="carousel__nav">
-      <a class="slider-nav" aria-label="Go to slide 1">1</a>
-      <a class="slider-nav" aria-label="Go to slide 2">2</a>
-      <a class="slider-nav" aria-label="Go to slide 3">3</a>
-      <a class="slider-nav" aria-label="Go to slide 4">4</a>
-      <a class="slider-nav" aria-label="Go to slide 5">5</a>
-    </div>
-    <div class="LRslides">
-      <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">image1</div>
-      <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">image2</div>
-      <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">image3</div>
-      <div class="slides-item slide-4" id="slide-4" aria-label="slide 4 of 5" tabindex="0">image4</div>
-      <div class="slides-item slide-5" id="slide-5" aria-label="slide 5 of 5" tabindex="0">image5</div>
-    </div>
-  
-    <div class="carousel__skip-message" id="skip-link" tabindex="0"></div>
-  </section>
+  <!-- LRcarousel-->
+  <div class="colorBgGrey100">
+    <section class="LRcarousel wrapper" aria-label="LRcarousel" Tabindex="0">
+      <a class="carousel__skip-link" href="#skip-link">Skip the Carousel</a>
+      <div class="carousel__nav">
 
-  <!-- slide 2 -->
+        <a class="slider-nav" aria-label="Go to slide 1">
+          <h3>Lorem ipsum 1</h3>
+          <h6>Lorem ipsum dolor sit amet</h6>
+
+        </a>
+        <a class="slider-nav" aria-label="Go to slide 2">
+          <h3>Lorem ipsum 2</h3>
+          <h6>Lorem ipsum dolor sit amet</h6>
+
+        </a>
+        <a class="slider-nav" aria-label="Go to slide 3">
+          <h3>Lorem ipsum 3</h3>
+          <h6>Lorem ipsum dolor sit amet</h6>
+
+        </a>
+        <a class="slider-nav" aria-label="Go to slide 4">
+          <h3>Lorem ipsum 4</h3>
+          <h6>Lorem ipsum dolor sit amet</h6>
+
+        </a>
+        <a class="slider-nav" aria-label="Go to slide 5">
+          <h3>Lorem ipsum 5</h3>
+          <h6>Lorem ipsum dolor sit amet</h6>
+
+        </a>
+      </div>
+      <div class="LRslides">
+        <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+          <img src="../Placeholder.svg" alt="">
+        </div>
+        <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
+            src="../Placeholder.svg" alt="">
+        </div>
+        <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
+            src="../Placeholder.svg" alt="">
+        </div>
+        <div class="slides-item slide-4" id="slide-4" aria-label="slide 4 of 5" tabindex="0"> <img
+            src="../Placeholder.svg" alt="">
+        </div>
+        <div class="slides-item slide-5" id="slide-5" aria-label="slide 5 of 5" tabindex="0"> <img
+            src="../Placeholder.svg" alt="">
+        </div>
+      </div>
+
+      <div class="carousel__skip-message" id="skip-link" tabindex="0"></div>
+
+
+    </section>
+    <div class="blankHM"></div>
+
+  </div>
+
+  <!-- LRcarousel-->
 
 
 
