--- a/design_system/index.html
+++ b/design_system/index.html
@@ -24,7 +24,6 @@
 
 
 
-
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
@@ -1384,7 +1383,7 @@
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Lorem ipsum</span>
+              <p class="credit">Lorem ipsum</p>
             </figcaption>
           </figure>
         </li>
@@ -1395,7 +1394,7 @@
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Lorem ipsum</span>
+              <p class="credit">Lorem ipsum</p>
             </figcaption>
           </figure>
         </li>
@@ -1406,7 +1405,7 @@
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Lorem ipsum</span>
+              <p class="credit">Lorem ipsum</p>
             </figcaption>
           </figure>
         </li>
@@ -1417,7 +1416,7 @@
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Lorem ipsum</span>
+              <p class="credit">Lorem ipsum</p>
             </figcaption>
           </figure>
         </li>
@@ -1428,7 +1427,7 @@
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Lorem ipsum</span>
+              <p class="credit">Lorem ipsum</p>
             </figcaption>
           </figure>
         </li>
@@ -1439,7 +1438,7 @@
             </div>
             <figcaption>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="credit">Photo: Annie Spratt</span>
+              <p class="credit">Lorem ipsum</p>
             </figcaption>
           </figure>
         </li>
