--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 
 
-    <div class="blankHS"></div>
+    <div class="blankHXS"></div>
     <!-- Arrow -->
     <div class="wrapper">
       <div class="element">
@@ -259,7 +259,7 @@
       </div>
     </div>
     <!-- Arrow -->
-    <div class="blankHS"></div>
+    <div class="blankHXS"></div>
     <!-- projects -->
     
     <div class="wrapper">
