--- a/photography/index.html
+++ b/photography/index.html
@@ -182,20 +182,18 @@
             intricate details of natural components and crafting their stories through my art, sharing the wonders of
             the natural world with others.</h3>
         </div>
-
       </div>
     </div>
 
   </div>
   <!--intro-->
   <div class="blankHXS"></div>
-
   <div class="wrapper">
     <div class="element">
       <p class="tArrow">Selected Photos<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
   </div>
-  <div class="blankHS"></div>
+  <div class="blankHXS"></div>
   <div class="wrapper">
     <div class="Grid Grid--full">
       <div class="Grid-cell">
