--- a/about/index.html
+++ b/about/index.html
@@ -130,10 +130,7 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-
-
       <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
-
       <div class="navbar">
         <ul class="nav-menu">
           <li class="nav-item inactive marginZero"><a href="/" class=" nav-link box font300-1080 ">PROJECT</a>
@@ -153,7 +150,6 @@
         <span class="bar"></span>
       </div>
     </div>
-
   </nav>
   <!-- header -->
   <div class="blankHM"></div>
@@ -178,7 +174,6 @@
             </div>
           </strong>
           <div class="blankHXS"></div>
-
         </div>
       </div>
       <div class="Grid Grid--full">
@@ -190,15 +185,13 @@
             of the process, ensuring that the end product meets the needs of the user. As an example of my work, I
             designed and <a href="https://github.com/vicky-wyq" class="textUnderline " target="_blank">implemented</a> a
             site from scratch, deploying it on AWS S3.</h3>
-
-
         </div>
       </div>
     </div>
 
   </div>
   <!--intro-->
-  <div class="blankHM"></div>
+  <div class="blankHXS"></div>
   <div class="wrapper">
     <div class="element">
       <p class="tArrow">Method &#38; Importance<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
