--- a/architecture/index.html
+++ b/architecture/index.html
@@ -135,7 +135,6 @@
           </li>
         </ul>
       </div>
-
       <div class="hamburger">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -148,8 +147,6 @@
   <!--intro-->
   <div class="wrapper">
     <div class="element">
-
-
       <div class="intro">
         <div class="t-hello">hi there! </div>
       </div>
@@ -162,9 +159,7 @@
             <h1> Academic projects </h1>
           </div>
         </strong>
-
       </div>
-
       <div class="Grid Grid--full">
         <div class="Grid-cell Grey700">
           <h3>Throughout my three-year M.Arch program, I delved into design theories, methods, and practices, which are exemplified in the following projects. These projects placed great emphasis on the significant determinants of building form, encompassing format, spatial arrangement, materiality, tectonics, social considerations, technology, and environmental factors.</h3>
@@ -175,10 +170,10 @@
 
   </div>
   <!--intro-->
-  <div class="blankHS"></div>
+  <div class="blankHXS"></div>
 
 
-  <div class="wrapper ">
+  <div class="wrapper">
     <div class="element">
       <p class="tArrow">Selected Projects <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
