--- a/design_system/index.html
+++ b/design_system/index.html
@@ -794,7 +794,7 @@
         <div class="element">
           <div class="blockS Grey900Bg Grey200 shadowBox">
             <div>Grey 900</div>
-            <div>HEX:292929</div>
+            <div>HEX:1b1b1b</div>
           </div>
         </div>
       </div>
@@ -802,7 +802,7 @@
         <div class="element">
           <div class="blockS Grey800Bg Grey200 shadowBox">
             <div>Grey 800</div>
-            <div>HEX:4f4f4f</div>
+            <div>HEX:505050</div>
           </div>
         </div>
       </div>
@@ -810,7 +810,7 @@
         <div class="element">
           <div class="blockS Grey700Bg Grey200 shadowBox">
             <div>Grey 700</div>
-            <div>HEX:757575</div>
+            <div>HEX:707070</div>
           </div>
         </div>
       </div>
@@ -825,7 +825,7 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS Grey500Bg Grey200 shadowBox">
+          <div class="blockS Grey500Bg shadowBox">
             <div>Grey 500</div>
             <div>HEX:b6b5b5</div>
           </div>
@@ -842,10 +842,6 @@
     </div>
 
     <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
-
-
-
-
       <div class="Grid-cell">
         <div class="element">
           <div class="blockS Grey300Bg shadowBox">
@@ -893,32 +889,32 @@
     <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS SkylineBlue Grey200 shadowBox">
-            <div>Grey 400</div>
+          <div class="blockS SkylineBlue shadowBox">
+            <div>Beach dark</div>
             <div>HEX:e6e6e6</div>
           </div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorLt shadowBox">
-            <div>Grey 900</div>
+          <div class="blockS SkylineBlueLt shadowBox">
+            <div>Beach light</div>
             <div>HEX:292929</div>
           </div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorLter  shadowBox">
-            <div>Grey 800</div>
+          <div class="blockS SkylineBlueLter shadowBox">
+            <div>Beach lighter</div>
             <div>HEX:4f4f4f</div>
           </div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorLtest  shadowBox">
-            <div>Grey 700</div>
+          <div class="blockS SkylineBlueLtest shadowBox">
+            <div>Beach lightest</div>
             <div>HEX:757575</div>
           </div>
         </div>
@@ -926,17 +922,17 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="blockS colorWarm  shadowBox">
-            <div>Grey 600</div>
-            <div>HEX:a5a5a5</div>
+            <div>Sandy</div>
+            <div>HEX:fcf5eb</div>
           </div>
         </div>
       </div>
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorAlet  shadowBox">
-            <div>Grey 500</div>
-            <div>HEX:b6b5b5</div>
+          <div class="blockS colorAlet shadowBox">
+            <div>Alert</div>
+            <div>HEX:CC3300</div>
           </div>
         </div>
       </div>
